# data-engineering-bootcamp

00-bootcamp-project/: dataengineercafe-deb3-load-files-to-bigquery73ea5a4113c0.json  docker-compose.yaml  load_data_to_bigquery.py  load_data_to_gcs_then_bigquery.py  main-api.py  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  triple-zenith-load-file-to-gcs414518-799ea839daaa.json
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  main.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: main.py
04-data-pipelines-with-apache-airflow/dags/:  day_1_and_16_at_1700_every_month.py  dag_with_custom_task_dependencies.py  every_monday.py  everyday_dag.py  example_dag_1.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py
my_project/: main.py  pyproject.toml
