[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Parrypare <101468045+Parrypare@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
